--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "start": "next",
     "prebuild": "node scripts/version.js",
     "build": "next build",
-    "prod": "next start"
+    "prod": "next start",
+    "lint:tsx": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "antd": "^4.5.4",
@@ -31,7 +33,12 @@
     "@types/node": "^14.6.0",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^16.9.46",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
     "@zeit/next-typescript": "^1.1.1",
-    "typescript": "^3.9.7"
+    "eslint": "^7.7.0",
+    "eslint-config-like": "^1.2.1",
+    "prettier": "^2.0.5",
+    "typescript": "^4.0.2"
   }
 }
