--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prebuild": "node scripts/version.js",
     "build": "next build",
     "prod": "next start",
+    "icon:merge": "svg-sprite-generate -d src/images/ -o public/images/sprite.svg",
     "lint:tsx": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
   },
   "dependencies": {
@@ -39,6 +40,7 @@
     "eslint": "^7.7.0",
     "eslint-config-like": "^1.2.1",
     "prettier": "^2.0.5",
+    "svg-sprite-generator": "^0.0.7",
     "typescript": "^4.0.2"
   }
 }
