--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
     "build": "next build",
     "prod": "next start",
     "icon:merge": "svg-sprite-generate -d src/images/ -o public/images/sprite.svg",
-    "lint:tsx": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
+    "lint:tsx": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
+    "format": "prettier --write \"src/**/*.+(js|jsx|ts|tsx|json|yml|yaml|scss|less|css|md)\""
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
+    "@apollo/client": "^3.1.3",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "antd": "^4.5.4",
     "antd-dayjs-webpack-plugin": "^1.0.1",
     "babel-plugin-import": "^1.13.0",
+    "cookie": "^0.4.1",
+    "graphql": "^15.3.0",
+    "js-cookie": "^2.2.1",
     "less": "^3.12.2",
     "less-vars-to-js": "^1.3.0",
     "next": "^9.5.2",
@@ -38,7 +43,7 @@
     "@typescript-eslint/parser": "^3.9.1",
     "@zeit/next-typescript": "^1.1.1",
     "eslint": "^7.7.0",
-    "eslint-config-like": "^1.2.1",
+    "eslint-config-like": "^1.3.0",
     "prettier": "^2.0.5",
     "svg-sprite-generator": "^0.0.7",
     "typescript": "^4.0.2"
