--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "prod": "next start",
     "icon:merge": "svg-sprite-generate -d src/images/ -o public/images/sprite.svg",
     "lint:tsx": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
-    "format": "prettier --write \"src/**/*.+(js|jsx|ts|tsx|json|yml|yaml|scss|less|css|md)\""
+    "format": "prettier --write \"src/**/*.+(js|jsx|ts|tsx|json|yml|yaml|scss|less|css|md)\"",
+    "schema:update": "env-cmd -f .env.development graphql-codegen --config src/services/codegen.dev.yml",
+    "schema:base": "graphql-codegen --config src/services/codegen.local.yml",
+    "schema": "npm-run-all schema:base schema:job"
   },
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
@@ -30,18 +33,28 @@
     "next": "^9.5.2",
     "node-sass": "^4.14.1",
     "nprogress": "^0.2.0",
+    "object-hash": "^2.0.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "sass": "^1.26.10",
     "webpack-filter-warnings-plugin": "^1.2.1"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^1.17.8",
+    "@graphql-codegen/import-types-preset": "^1.17.9",
+    "@graphql-codegen/schema-ast": "^1.17.8",
+    "@graphql-codegen/typescript": "^1.17.9",
+    "@graphql-codegen/typescript-operations": "^1.17.8",
+    "@graphql-codegen/typescript-react-apollo": "^2.0.6",
+    "@types/js-cookie": "^2.2.6",
     "@types/node": "^14.6.0",
     "@types/nprogress": "^0.2.0",
+    "@types/object-hash": "^1.3.3",
     "@types/react": "^16.9.46",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
     "@zeit/next-typescript": "^1.1.1",
+    "env-cmd": "^10.1.0",
     "eslint": "^7.7.0",
     "eslint-config-like": "^1.3.0",
     "prettier": "^2.0.5",
