--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@graphql-codegen/typescript": "^1.17.9",
     "@graphql-codegen/typescript-operations": "^1.17.8",
     "@graphql-codegen/typescript-react-apollo": "^2.0.6",
+    "@types/cookie": "^0.4.0",
     "@types/js-cookie": "^2.2.6",
     "@types/node": "^14.6.0",
     "@types/nprogress": "^0.2.0",
@@ -60,5 +61,22 @@
     "prettier": "^2.0.5",
     "svg-sprite-generator": "^0.0.7",
     "typescript": "^4.0.2"
+  },
+  "lint-staged": {
+    "src/**/*.+(js|jsx|ts|tsx|json|yml|yaml|scss|less|css|md)": [
+      "npm run format"
+    ],
+    "src/**/*.{ts,tsx}": [
+      "npm run lint:tsx"
+    ],
+    "src/**/*.*ss": [
+      "npm run lint:css"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
   }
 }
