--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "js-cookie": "^2.2.1",
     "less": "^3.12.2",
     "less-vars-to-js": "^1.3.0",
+    "moment": "^2.27.0",
     "next": "^9.5.2",
     "node-sass": "^4.14.1",
     "nprogress": "^0.2.0",
