--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "webpack-filter-warnings-plugin": "^1.2.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^9.1.2",
+    "@commitlint/config-conventional": "^9.1.2",
     "@graphql-codegen/cli": "^1.17.8",
     "@graphql-codegen/import-types-preset": "^1.17.9",
     "@graphql-codegen/schema-ast": "^1.17.8",
@@ -60,6 +62,8 @@
     "env-cmd": "^10.1.0",
     "eslint": "^7.7.0",
     "eslint-config-like": "^1.3.0",
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.13",
     "prettier": "^2.0.5",
     "svg-sprite-generator": "^0.0.7",
     "typescript": "^4.0.2"
