--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nprogress": "^0.2.0",
     "null-loader": "^4.0.0",
     "object-hash": "^2.0.3",
+    "papaparse": "^5.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "sass": "^1.26.10",
