--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "papaparse": "^5.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-papaparse": "^3.8.0",
     "sass": "^1.26.10",
     "use-onclickoutside": "^0.3.1",
     "webpack-filter-warnings-plugin": "^1.2.1"
@@ -56,6 +57,7 @@
     "@types/node": "^14.6.0",
     "@types/nprogress": "^0.2.0",
     "@types/object-hash": "^1.3.3",
+    "@types/papaparse": "^5.2.2",
     "@types/react": "^16.9.46",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
