--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nprogress": "^0.2.0",
     "null-loader": "^4.0.0",
     "object-hash": "^2.0.3",
+    "papaparse": "^5.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "sass": "^1.26.10",
@@ -55,6 +56,7 @@
     "@types/node": "^14.6.0",
     "@types/nprogress": "^0.2.0",
     "@types/object-hash": "^1.3.3",
+    "@types/papaparse": "^5.2.2",
     "@types/react": "^16.9.46",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
