--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "env-cmd": "^10.1.0",
     "eslint": "^7.7.0",
     "eslint-config-like": "^1.3.0",
+    "eslint-plugin-import": "^2.22.0",
     "husky": "^4.2.5",
     "lint-staged": "^10.2.13",
     "prettier": "^2.0.5",
