--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
     "@apollo/client": "^3.1.3",
+    "@rematch/core": "^2.0.0-next.5",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "antd": "^4.5.4",
@@ -26,6 +27,7 @@
     "babel-plugin-import": "^1.13.0",
     "cookie": "^0.4.1",
     "graphql": "^15.3.0",
+    "graphql-request": "^3.1.0",
     "js-cookie": "^2.2.1",
     "less": "^3.12.2",
     "less-vars-to-js": "^1.3.0",
@@ -38,6 +40,7 @@
     "papaparse": "^5.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "sass": "^1.26.10",
     "use-onclickoutside": "^0.3.1",
     "webpack-filter-warnings-plugin": "^1.2.1"
@@ -58,6 +61,7 @@
     "@types/object-hash": "^1.3.3",
     "@types/papaparse": "^5.2.2",
     "@types/react": "^16.9.46",
+    "@types/react-redux": "^7.1.9",
     "@typescript-eslint/eslint-plugin": "^3.9.1",
     "@typescript-eslint/parser": "^3.9.1",
     "@zeit/next-typescript": "^1.1.1",
