chore(state)!: remove apollo-client and update codegen

--- a/src/services/codegen.dev.yml
+++ b/src/services/codegen.dev.yml
@@ -8,15 +8,12 @@ hooks:
   afterAllFileWrite:
     - prettier --write "src/**/*.+(js|jsx|ts|tsx|json|yml|yaml|scss|css|md)"
 generates:
-  src/services/generated/schema.dev.graphql:
-    plugins:
-      - schema-ast
-    config:
-      skipTypename: true
-  src/services/generated/schemas.tsx:
+  src/services/generated/schemas.ts:
     plugins:
       - typescript
-  src/services/generated/operations.tsx:
+    config:
+      skipTypename: true
+  src/services/generated/operations.ts:
     preset: import-types
     presetConfig:
       typesPath: ./schemas
@@ -24,11 +21,10 @@ generates:
       - typescript-operations
     config:
       skipTypename: true
-  src/services/generated/hooks.tsx:
-    preset: import-types
-    presetConfig:
-      typesPath: ./operations
+  src/services/generated/document.ts:
     plugins:
-      - typescript-react-apollo
+      - typescript-document-nodes
     config:
-      addDocBlocks: false
+      fragmentSuffix: FragmentDoc
+      nameSuffix: 'Document'
+      skipTypename: true
