--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "author": "Eva <690090823@qq.com>",
   "license": "MIT",
   "scripts": {
-    "start": "next",
+    "dev": "next",
     "prebuild": "node scripts/version.js",
     "build": "next build",
-    "prod": "next start",
+    "start": "next start",
     "icon": "svg-sprite-generate -d src/images/ -o public/images/sprite.svg",
     "lint:tsx": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "format": "prettier --write \"src/**/*.+(js|jsx|ts|tsx|json|yml|yaml|scss|less|css|md)\"",
