--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-plugin-import": "^1.13.0",
     "graphql": "^15.3.0",
     "graphql-request": "^3.1.0",
+    "graphql-tag": "^2.11.0",
     "less": "^3.12.2",
     "less-vars-to-js": "^1.3.0",
     "moment": "^2.27.0",
@@ -36,6 +37,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
+    "redux": "^4.0.5",
     "sass": "^1.26.10",
     "use-onclickoutside": "^0.3.1",
     "webpack-filter-warnings-plugin": "^1.2.1"
